update mousepad and xfce4-terminal configurations

--- a/config/includes.chroot_after_packages/etc/skel/.config/dconf/mousepad.settings
+++ b/config/includes.chroot_after_packages/etc/skel/.config/dconf/mousepad.settings
@@ -1,6 +1,6 @@
 [preferences/view]
 color-scheme='oblivion'
-font-name='Terminus Bold 18'
+font-name='Terminus Medium 18'
 highlight-current-line=false
 match-braces=false
 show-line-endings=false
