--- a/config/includes.chroot_after_packages/etc/lightdm/lightdm-gtk-greeter.conf
+++ b/config/includes.chroot_after_packages/etc/lightdm/lightdm-gtk-greeter.conf
@@ -48,6 +48,6 @@
 #  transition-duration = overrides default value
 #
 [greeter]
-theme-name=Arc-Dark
+theme-name=Breeze-Dark
 position=50%,center 50%,center
-font-name=PxPlus Cordata PPC-400 14
+font-name=PxPlus Cordata PPC-400 12
