--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ binary.modified_timestamps
 build.log
 
 cache/
-local/
 
 chroot/
 chroot.packages.*
@@ -23,6 +22,7 @@ config/common
 config/source
 config/control
 config/bootstrap
+config/hooks/live
 
 source/
 source*.iso
@@ -33,3 +33,8 @@ source*.packages
 source*.zsync
 
 sources.list
+
+*-xfce.contents
+*-xfce.files
+*-xfce.iso
+*-xfce.packages
