--- a/auto/config
+++ b/auto/config
@@ -16,7 +16,7 @@ lb config noauto \
 	--image-name "rename-it" \
 	--iso-application "KoruX" \
 	--iso-publisher "KoruX GNU/Linux" \
-	--iso-volume "k-live 0.01 xf amd64" \
+	--iso-volume "KoruX 0.01 Xfce amd64" \
 	"${@}"
 
 cp /usr/share/doc/live-build/examples/hooks/reproducible/* config/hooks/normal
