lightdm-gtk-greeter.conf: update

--- a/config/includes.chroot_after_packages/etc/lightdm/lightdm-gtk-greeter.conf
+++ b/config/includes.chroot_after_packages/etc/lightdm/lightdm-gtk-greeter.conf
@@ -48,6 +48,9 @@
 #  transition-duration = overrides default value
 #
 [greeter]
+xft-dpi=100
+icon-theme-name=Tango
 theme-name=Breeze-Dark
 position=50%,center 50%,center
-font-name=PxPlus Cordata PPC-400 12
+indicators=~host;~spacer;~power
+font-name=PxPlus Cordata PPC-400 15
