--- a/config/includes.chroot_after_packages/opt/game-ports/quake3/misc/q3config.cfg
+++ b/config/includes.chroot_after_packages/opt/game-ports/quake3/misc/q3config.cfg
@@ -8,43 +8,121 @@ bind + "sizeup"
 bind - "sizedown"
 bind 0 "weapon 10"
 bind 1 "weapon 1"
-bind 2 "weapon 2"
-bind 3 "weapon 3"
-bind 4 "weapon 4"
-bind 5 "weapon 5"
-bind 6 "weapon 6"
-bind 7 "weapon 7"
-bind 8 "weapon 8"
-bind 9 "weapon 9"
+bind 2 "weapon 5"
+bind 3 "weapon 7"
+bind 4 "weapon 6"
+bind 5 "weapon 4"
+bind 6 "weapon 3"
+bind 7 "weapon 8"
 bind = "sizeup"
 bind _ "sizedown"
 bind ` "toggleconsole"
 bind a "+moveleft"
-bind c "weapprev"
 bind d "+moveright"
 bind f "+button3"
-bind q "weapnext"
 bind s "+back"
 bind t "messagemode"
 bind w "+forward"
 bind ~ "toggleconsole"
 bind PAUSE "pause"
-bind UPARROW "+forward"
-bind DOWNARROW "+back"
 bind LEFTARROW "+left"
 bind RIGHTARROW "+right"
 bind ALT "+strafe"
 bind CTRL "+movedown"
 bind SHIFT "+speed"
-bind END "centerview"
 bind F1 "vote yes"
 bind F2 "vote no"
 bind F3 "ui_teamorders"
 bind F11 "screenshot"
 bind MOUSE1 "+attack"
 bind MOUSE2 "+zoom"
-bind MWHEELDOWN "weapnext"
-bind MWHEELUP "weapprev"
+bind MWHEELDOWN "weapprev"
+bind MWHEELUP "weapnext"
+seta cm_playerCurveClip "1"
+seta cg_oldPlasma "1"
+seta cg_oldRocket "1"
+seta cg_oldRail "1"
+seta cg_smoothClients "0"
+seta cg_scorePlums "1"
+seta cg_cameraOrbitDelay "50"
+seta cg_teamChatsOnly "0"
+seta cg_drawFriend "1"
+seta cg_drawTeamOverlay "0"
+seta cg_deferPlayers "1"
+seta cg_forceModel "0"
+seta cg_teamChatHeight "0"
+seta cg_teamChatTime "3000"
+seta cg_bobroll "0.002"
+seta cg_bobpitch "0.002"
+seta cg_runroll "0.005"
+seta cg_runpitch "0.002"
+seta cg_railTrailTime "400"
+seta cg_lagometer "1"
+seta cg_simpleItems "0"
+seta cg_crosshairY "0"
+seta cg_crosshairX "0"
+seta cg_crosshairHealth "1"
+seta cg_crosshairSize "24"
+seta cg_drawRewards "1"
+seta cg_drawAttacker "1"
+seta cg_drawAmmoWarning "1"
+seta cg_drawIcons "1"
+seta cg_draw3dIcons "1"
+seta cg_drawSnapshot "0"
+seta cg_drawFPS "0"
+seta cg_drawTimer "0"
+seta cg_drawStatus "1"
+seta cg_draw2D "1"
+seta cg_gibs "1"
+seta cg_fov "90"
+seta cg_zoomfov "22.5"
+seta cg_drawGun "1"
+seta ui_ffa_fraglimit "20"
+seta ui_ffa_timelimit "0"
+seta ui_tourney_fraglimit "0"
+seta ui_tourney_timelimit "15"
+seta ui_team_fraglimit "0"
+seta ui_team_timelimit "20"
+seta ui_team_friendly "1"
+seta ui_ctf_capturelimit "8"
+seta ui_ctf_timelimit "30"
+seta ui_ctf_friendly "0"
+seta g_spScores1 ""
+seta g_spScores2 ""
+seta g_spScores3 ""
+seta g_spScores4 ""
+seta g_spScores5 ""
+seta g_spAwards ""
+seta g_spVideos ""
+seta g_spSkill "2"
+seta ui_browserMaster "1"
+seta ui_browserGameType "0"
+seta ui_browserSortKey "4"
+seta ui_browserShowFull "1"
+seta ui_browserShowEmpty "1"
+seta cg_brassTime "2500"
+seta cg_drawCrosshair "1"
+seta cg_drawCrosshairNames "1"
+seta cg_marks "1"
+seta server1 ""
+seta server2 ""
+seta server3 ""
+seta server4 ""
+seta server5 ""
+seta server6 ""
+seta server7 ""
+seta server8 ""
+seta server9 ""
+seta server10 ""
+seta server11 ""
+seta server12 ""
+seta server13 ""
+seta server14 ""
+seta server15 ""
+seta server16 ""
+seta cg_noprojectiletrail "1"
+seta cg_truelightning "1.0"
+seta cg_shadows "1"
 seta net_socksPassword ""
 seta net_socksUsername ""
 seta net_socksPort "1080"
@@ -54,49 +132,6 @@ seta net_mcast6iface ""
 seta net_mcast6addr "ff04::696f:7175:616b:6533"
 seta net_enabled "3"
 seta com_pipefile ""
-seta server16 ""
-seta server15 ""
-seta server14 ""
-seta server13 ""
-seta server12 ""
-seta server11 ""
-seta server10 ""
-seta server9 ""
-seta server8 ""
-seta server7 ""
-seta server6 ""
-seta server5 ""
-seta server4 ""
-seta server3 ""
-seta server2 ""
-seta server1 ""
-seta cg_marks "1"
-seta cg_drawCrosshairNames "1"
-seta cg_drawCrosshair "1"
-seta cg_brassTime "2500"
-seta ui_browserShowEmpty "1"
-seta ui_browserShowFull "1"
-seta ui_browserSortKey "4"
-seta ui_browserGameType "0"
-seta ui_browserMaster "1"
-seta g_spSkill "2"
-seta g_spVideos ""
-seta g_spAwards ""
-seta g_spScores5 ""
-seta g_spScores4 ""
-seta g_spScores3 ""
-seta g_spScores2 ""
-seta g_spScores1 ""
-seta ui_ctf_friendly "0"
-seta ui_ctf_timelimit "30"
-seta ui_ctf_capturelimit "8"
-seta ui_team_friendly "1"
-seta ui_team_timelimit "20"
-seta ui_team_fraglimit "0"
-seta ui_tourney_timelimit "15"
-seta ui_tourney_fraglimit "0"
-seta ui_ffa_timelimit "0"
-seta ui_ffa_fraglimit "20"
 seta s_alCapture "1"
 seta s_alDevice ""
 seta s_alInputDevice ""
@@ -110,8 +145,8 @@ seta s_useOpenAL "1"
 seta s_muteWhenUnfocused "0"
 seta s_muteWhenMinimized "0"
 seta s_doppler "1"
-seta s_musicvolume "0.250000"
-seta s_volume "0.237500"
+seta s_musicvolume "0"
+seta s_volume "0.800000"
 seta joy_threshold "0.150000"
 seta in_joystick "0"
 seta in_nograb "0"
@@ -230,8 +265,8 @@ seta sex "male"
 seta handicap "100"
 seta color2 "5"
 seta color1 "4"
-seta g_blueTeam "Pagans"
-seta g_redTeam "Stroggs"
+seta g_blueTeam ""
+seta g_redTeam ""
 seta team_headmodel "*james"
 seta team_model "james"
 seta headmodel "sarge"
@@ -258,7 +293,7 @@ seta m_side "0.25"
 seta m_forward "0.25"
 seta m_yaw "0.022"
 seta m_pitch "0.022000"
-seta cg_autoswitch "0"
+seta cg_autoswitch "1"
 seta r_inGameVideo "1"
 seta cl_cURLLib "libcurl.so.4"
 seta cl_allowDownload "0"
