q3config.cfg: update name to KoruX

--- a/config/includes.chroot_after_packages/opt/game-ports/quake3/misc/q3config.cfg
+++ b/config/includes.chroot_after_packages/opt/game-ports/quake3/misc/q3config.cfg
@@ -273,7 +273,7 @@ seta headmodel "sarge"
 seta model "sarge"
 seta snaps "20"
 seta rate "25000"
-seta name "UnnamedPlayer"
+seta name "KoruX"
 seta cl_consoleKeys "~ ` 0x7e 0x60"
 seta cl_guidServerUniq "1"
 seta cl_lanForcePackets "1"
