--- a/auto/config
+++ b/auto/config
@@ -15,4 +15,6 @@ lb config noauto \
 	--iso-application "KoruX" \
 	--iso-publisher "KoruX GNU/Linux" \
 	--iso-volume "KoruX 0.01 Xfce amd64" \
+	--bootloaders "grub-pc grub-efi" \
+	--bootappend-live "boot=live components quiet username=user hostname=live-korux" \
 	"${@}"
